public class main
{

    public void Init()
    {

    }
    public void OnUpdate()
    {
        SpriteList.OnUpdate();
    }
}