@startuml ecommerce_class_diagram
left to right direction
abstract class UnitBase {
  #int id
  #float hp
  #float attack
  #float masicAttack
  #float defense
  #float speed
  #Piece[] pieces 
  +void Move()
  +void Attack()
  +void Damage()
}

class Unit {
}

abstract class PieceBase {
  #int id
}

class Piece {
}

class main {
}

class GameManager {
}

class BattleManager {
}

class TurnManager {
}

class Parameter {
}

class Input {
}

UnitBase <|-- Unit
PieceBase <|-- Piece


Unit "1"--"1.." Piece

main *-- GameManager
main *-- Input
GameManager *-- BattleManager
BattleManager *-- TurnManager

BattleManager "1"--"1.." Unit
TurnManager <... Unit

@enduml